@@ -1,3 +1,7 @@
+2021-01-13  Dirk Eddelbuettel  <edd@debian.org>
+
+        * .github/workflows/ci.yaml: Add CI runner using r-ci
+
 2020-07-18  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/xtsMod.cpp: Add 'check_names' argument to xtsMerge
